<resources>
    <string name="app_name">FindIt</string>
    <string name="title_activity_maps">Map</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">Register new account</string>
    <string name="btn_link_to_register">New to FindIt? Register here</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_register">Sign up</string>
    <string name="send_location">Send location</string>
    <string name="home">Home</string>
    <string name="add_friend">Add friend</string>
    <string name="logout">Logout</string>

    <!-- Strings related to login -->
    <string name="prompt_name">Username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_friends_nav">Friends</string>
    <string name="send_request">Send Friend Request</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_add_friends">Add Friends</string>
    <string name="title_activity_user_guide">User Guide</string>
</resources>
