<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundclean"
    tools:context="com.example.ronan_local.findit.RegisterActivity">

    <include layout="@layout/content_register" />

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@null">

            <!--  Header  Starts-->
            <LinearLayout android:id="@+id/header"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5sp"
                android:paddingBottom="5sp"
                android:orientation="vertical"/>

            <!-- Registration Form -->
            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10sp"
                android:layout_below="@id/header">
                <!-- Full Name Label -->
                <TextView android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#372c24"
                    android:text="@string/prompt_name"/>
                <EditText android:id="@+id/reg_username"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:layout_marginBottom="20sp"
                    android:maxLines="1"
                    android:inputType="textPersonName" />
                <!--  Email Label -->
                <TextView android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#372c24"
                    android:text="@string/prompt_email"/>
                <EditText android:id="@+id/reg_email"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:layout_marginBottom="20sp"
                    android:maxLines="1"
                    android:inputType="textEmailAddress" />
                <!-- Password Label -->
                <TextView android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#372c24"
                    android:text="@string/prompt_password"/>
                <EditText android:id="@+id/reg_password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:maxLines="1"
                    android:inputType="textPassword"/>
                <!-- Register Button -->
                <Button android:id="@+id/btnRegister"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20sp"
                    android:text="@string/btn_register"
                    android:background="@color/transparentwhite"/>
                <!-- Link to Login Screen -->
                <Button android:id="@+id/link_to_login"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20sp"
                    android:text="@string/btn_link_to_login"
                    android:background="@color/transparentwhite"/>

            </LinearLayout>
            <!-- Registration Form Ends -->
        </RelativeLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
